# junior-product-manager

./: .env.example  .gitignore  Dockerfile  Makefile  Readme.md  app.py  ingest.py  pyproject.toml
utils/: file_processor.py  notion_processor.py  vector_store.py
